# JuggleTrack

./: .gitignore  README.md  app.py  display.py  eval.py  forground.py  main.py  process.py  pyproject.toml  segment.py  state.py  test.csv  test.py  tracking.py  utils.py
catch_to_siteswap/: catch_to_beat.py  catch_to_siteswap_with_id  catch_to_siteswap_with_id.py  inference_model.py  inference_model_viterbi.py  tempo_curve.py
cnn_detections/: README.md  ball_tracker.py  create_annotated_video.py  drawingutils.py  gridmodel.py  juggling_processor.py  losses.py  main_analyzer.py  postprocessing.py  requirements.txt  utils.py
pipeline/: main_pipeline.py
sound_to_catch/: onset_detection.py  onset_spectrum_detection.py
